# omnidoc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  Todo  index_old.html  make.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.cfg  setup.py  start.bat  temp_index_reference.html
doc/: BUILD.md  CHANGELOG.md  FUTURE_FEATURES.md  QUICKSTART.md  README.md  STRUCTURE.md  USER_GUIDE.md
docnexus/: __init__.py  app.py  cli.py
docnexus/core/: renderer.py
docnexus/features/: registry.py  smart_convert.py
docnexus/static/: extensions.css  theme.css  theme.js
docnexus/templates/: docs.html  extensions.html  index.html  view.html
docnexus/templates/components/: settings_menu.html
docs/: BUILD.md  CHANGELOG.md  FUTURE_FEATURES.md  KEY_DECISIONS.md  PLUGIN_ARCHITECTURE.md  QUICKSTART.md  README.md  STRUCTURE.md  USER_GUIDE.md
examples/: UserGuide.md  Welcome.md
omnidoc/: __init__.py  app.py
omnidoc/features/: standard.py
omnidoc/static/: bootstrap-icons.css
omnidoc/templates/: index.html  view.html
